# lyncean

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: .gitignore  CMakeLists.txt  bpf_helper.h  event_handler.cpp  event_handler.h  input_parser.cpp  input_parser.h  main.cpp  main_operation.cpp  main_operation.h  pch.h  serializer.cpp  serializer.h
src/kern/: Makefile  common.h  helper.h  lyncean.bpf.c  shared.h  types.h
test/: CMakeLists.txt  bpf_test.cpp  main.cpp
test/test_files/: test_programm.c  test_read.txt
